python_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-pythonapp-service
  namespace: default
spec:
  selector:
    app: sample-pythonapp
  type: LoadBalancer
  ports:
  - name: sample-pythonapp
    protocol: TCP
    port: 5000
    targetPort: 8000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 31110
